--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
   <footer class="page-footer brown darken-4">
     <div class="footer-copyright">
       <div class="container">
-        Copyright &copy; MeztroInhinyeroElektronico | 2022
+        Hairworx Copyright &copy; MeztroInhinyeroElektronico | 2022
       </div>
     </div>
   </footer>
@@ -90,7 +90,7 @@
     <script type="text/javascript" src="{% static 'js/materialize.js' %} "></script>
     <script>
           const employeeSelect = document.getElementById('#stylist_name')
-          $("#location").change(function () {
+          $("#site").change(function () {
               const siteId = $(this).val();  // get the selected subject ID from the HTML dropdown list 
               $.ajax({                       // initialize an AJAX request
                   type: "POST",
