--- a/templates/bookings/index.html
+++ b/templates/bookings/index.html
@@ -30,7 +30,7 @@
 
               <div class="row">
                 <div class="input-field col m6 s12">
-                  <select  name="location" id="location" required>
+                  <select  name="site" id="site" required>
                     <option value="0"  class="active" selected disabled>Please Select Location</option>
                     {% for site in sites %}
                       <option value="{{site.id}}">{{site.name}}</option>
@@ -193,17 +193,6 @@
           </div>
     </div>
   </section>
-
-  
-
->
-
-
-  
-
-  
-
-  
 
 {% endblock %}
 
