--- a/templates/bookings/index.html
+++ b/templates/bookings/index.html
@@ -43,8 +43,10 @@
                 <!-- Preferres Stylist -->
                <div class="input-field col m6 s12">
                   <select name="stylist_name" id="stylistName" required class="browser-default">
+                    <option value="No Preference"  class="" selected disabled>Please Select Stylist</option>
 
                   </select>
+
                 </div> 
               </div>
   
