--- a/hairworx/static/css/style.css
+++ b/hairworx/static/css/style.css
@@ -57,8 +57,14 @@ nav .brand-logo {
   text-shadow: 2px 2px 0px #FFFFFF, 5px 4px 0px rgba(0,0,0,0.15);
 }
 
-
-
+select {
+  background-color: rgba(255, 255, 255, 0); 
+  width: 100%;
+  padding: 5px;
+  border: rgba(255, 255, 255, 0);
+  border-radius: 2px;
+  height: 3rem;
+}
 
 
 p {
