--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -33,8 +33,9 @@
                     <td>{{booking.phone}}</td>
                     <td>{{booking.date_chosen}}</td>
                     <td>{{booking.time_chosen}}</td>
-                    <td>{{booking.services}}</td>
-
+                    <td>
+                        {{services.services}}
+                    </td>
 
                     <td>
                       <a href="details.html" class="btn brown darken-1">Details</a>
