--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -33,7 +33,7 @@
 
       <!--   Icon Section   -->
       <div class="row">
-        <h5 class=" center blue-text" style="padding: 10px;">
+        <h5 class=" center orange-text" style="padding: 10px;">
           {% include 'messages/alert.html' %}
         </h5>
         <div class="col s12 m4">
