--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -17,6 +17,14 @@
           <a target="_blank" href="{% url 'create-booking' %}" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">
             Book an Appointment
           </a>
+          <div class="row center" style="padding: 20px 0 0 0;">
+            <h6>12/77 Saint George Street, Papatoetoe, Auckland</h6>
+            <h6>174 Onehunga Mall Road, Onehunga, Auckland</h6>
+            <h6>Call: 09-250-1880</h6>
+            <h6>Email: hworx@yahoo.com</h6>
+          </div>
+          
+
           <!-- <button data-target="modal1"  id="download-button" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">Book an Appointment</button> -->
         </div>
         <br><br>
