--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -17,13 +17,6 @@
           <a target="_blank" href="{% url 'create-booking' %}" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">
             Book an Appointment
           </a>
-          <div class="row center" style="padding: 20px 0 0 0;">
-            <h6>12/77 Saint George Street, Papatoetoe, Auckland</h6>
-            <h6>174 Onehunga Mall Road, Onehunga, Auckland</h6>
-            <h6>Call: 09-250-1880</h6>
-            <h6>Email: hworx@yahoo.com</h6>
-          </div>
-          
 
           <!-- <button data-target="modal1"  id="download-button" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">Book an Appointment</button> -->
         </div>
@@ -34,9 +27,18 @@
     <div class="parallax"><img src="{% static 'img/bg.jpg' %}" alt="Unsplashed background img 1"></div>
   </div>
 
-
+  <div class="section brown lighten-2">
+    <div class="row center white-text" style="margin: 0 0; ">
+      <h6>12/77 Saint George Street, Papatoetoe, Auckland</h6>
+      <h6>174 Onehunga Mall Road, Onehunga, Auckland</h6>
+      <h6>Call: 09-250-1880</h6>
+      <h6>Email: hworx@yahoo.com</h6>
+    </div>
+  </div>
 
   <div class="container">
+    
+
     <div class="section">
 
       <!--   Icon Section   -->
@@ -57,7 +59,7 @@
               beauty sanctuaries, explore our site, where the worlds leading hair, beauty and nail experts 
               allow you to relax, pamper and enjoy
             </p>
-            <a href="#">Find out more</a>
+            <!-- <a href="#">Find out more</a> -->
           </div>
         </div>
 
@@ -70,7 +72,7 @@
               Our stylist colour technicians will use their experties and knowledge 
               of the latest techniques to create a look just for you.  
             </p>
-            <a href="#">Find out more</a>
+            <!-- <a href="#">Find out more</a> -->
 
           </div>
         </div>
@@ -84,7 +86,7 @@
               Enjoy expert care, soothing surroundings and bespoke treatments 
               from our team of beauty specialist
             </p>
-            <a href="#">Find out more</a>
+            <!-- <a href="#">Find out more</a> -->
 
           </div>
         </div>
@@ -204,8 +206,10 @@
             <li class="collection-header">
               <h4 class="brown-text lighten-1">Location</h4>
             </li>
-            <li class="collection-item">12/77 Saint George Street, Papatoetoe, Auckland 2025, New Zealand
+            <li class="collection-item">12/77 Saint George Street, Papatoetoe, Auckland 2025, New Zealand</li>
+            <li class="collection-item">174 Onehunga Mall Road, Onehunga, Auckland
             </li>
+
           </ul>
         </div>
         <div class="col s12 m6">
