--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -13,10 +13,14 @@
             Your Personal Hair Expert
           </h5>
         </div>
-        <div class="row center">
-          <a target="_blank" href="{% url 'create-booking' %}" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">
+        <div class="row center" style="margin: 0 0";>
+          <h6>12/77 Saint George Street, Papatoetoe, Auckland</h6>
+          <h6>174 Onehunga Mall Road, Onehunga, Auckland</h6>
+          <h6>Call: 09-250-1880</h6>
+          <h6>Email: hworx@yahoo.com</h6>
+          <!-- <a target="_blank" href="{% url 'create-booking' %}" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">
             Book an Appointment
-          </a>
+          </a> -->
 
           <!-- <button data-target="modal1"  id="download-button" class="btn modal-trigger btn-large waves-effect waves-light brown lighten-1">Book an Appointment</button> -->
         </div>
@@ -27,14 +31,14 @@
     <div class="parallax"><img src="{% static 'img/bg.jpg' %}" alt="Unsplashed background img 1"></div>
   </div>
 
-  <div class="section brown lighten-2">
+  <!-- <div class="section brown lighten-2">
     <div class="row center white-text" style="margin: 0 0; ">
       <h6>12/77 Saint George Street, Papatoetoe, Auckland</h6>
       <h6>174 Onehunga Mall Road, Onehunga, Auckland</h6>
       <h6>Call: 09-250-1880</h6>
       <h6>Email: hworx@yahoo.com</h6>
     </div>
-  </div>
+  </div> -->
 
   <div class="container">
     
@@ -196,7 +200,8 @@
       <div class="row">
         <div class="col s12 m6">
           <div class="mail card-panel brown-text center">
-            <h6>Questions, ideas? Give us a Call.</h6>
+            <h6>Interested in getting a new hairdo? Contact us today to find out the many ways in which I can make your hair look great.
+            </h6>
             <i class="material-icons medium" style="font-size: 28px;">phone</i> Tel: 09-250 1880
 
 
