--- a/templates/base.html
+++ b/templates/base.html
@@ -180,7 +180,7 @@
     </script>
 
    
-    
+    <script src="{% static 'js/lightbox.min.js' %} "></script>
     <script src="{% static 'js/main.js' %} "></script>
     <script src="{% static 'js/init.js' %}"></script>
     
