--- a/templates/gallery/gallery.html
+++ b/templates/gallery/gallery.html
@@ -33,7 +33,10 @@
               <div class="col s12 m4">
               <div class="card">
                 <div class="card-image large">
-                  <img src="{{ gal.photo.url }}" height="350px" alt="">
+                  <a href="{{ gal.photo.url }}"  data-lightbox="gallery">
+                    <img src="{{ gal.photo.url }}" height="350px" alt="">
+
+                  </a>
                   <!-- <span class="card-title">{{gal.name}}</span> -->
                 </div>
               </div>
