--- a/templates/users/dashboard.html
+++ b/templates/users/dashboard.html
@@ -34,7 +34,7 @@
                     <td>{{booking.date_chosen}}</td>
                     <td>{{booking.time_chosen}}</td>
                     <td>
-                        {{services.services}}
+                        {{booking.services}}
                     </td>
 
                     <td>
