--- a/templates/baseadmin.html
+++ b/templates/baseadmin.html
@@ -18,7 +18,53 @@
 </head>
 <body>
   
-    {% include 'partials/_navbar.html' %}
+    <div class="nav-fixed">
+        <nav class="white" role="navigation">
+            <div class="nav-wrapper container">
+              <div class="logocontainer">
+                <a id="logo-container" href="{% url 'index' %}"  class="brand-logo">
+                  <img src="{% static 'img/logo1.jpeg' %}" class="logo" alt="">
+                </a>
+              </div>
+              
+              <ul class="right hide-on-med-and-down">
+                {% if request.user.is_authenticated %}
+                <li
+                    {% if 'dashboard' in request.path %}
+                    class="active"
+                    {% else %}
+                    class=""
+                    {% endif %}
+                ><a style="font-size: 1.3em;" href="{% url 'dashboard' %}">Dashboard</a></li>
+                {% endif %}
+               
+                {% if request.user.is_authenticated %}
+                <li
+                    {% if 'login' in request.path %}
+                    class="active"
+                    {% else %}
+                    class=""
+                    {% endif %}
+                ><a style="font-size: 1.3em;" href="{% url 'logout' %}">Logout</a></li>
+                {% endif %}
+              </ul>
+        
+              <ul id="nav-mobile" class="sidenav brown lighten-3">
+                {% if request.user.is_authenticated %}
+                <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
+                {% endif %}
+    
+                
+                {% if request.user.is_authenticated %}
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% endif %}
+    
+    
+              </ul>
+              <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            </div>
+        </nav>
+    </div>
     {% block content %}
 
     {% endblock %}
